--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "type": "git",
     "url": "https://github.com/snaildos/SnailKM.git"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron .",
+    "changelog": "gitmoji-changelog",
+    "build": "electron-builder build --win --linux appimage --publish never",
+    "snap": "electron-builder build --linux snap --publish never",
+    "deploy": "electron-builder build --win --linux appimage --publish always"
+  },
   "author": {
     "name": "SnailDOS",
     "email": "snaildos@snaildos.com",
