--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "changelog": "gitmoji-changelog",
-    "build": "electron-builder build --win --linux appimage --publish never",
+    "manual-build": "electron-builder build --win --linux appimage --publish never",
     "snap": "electron-builder build --linux snap --publish never",
-    "deploy": "electron-builder build --win --linux appimage --publish always"
   },
   "author": {
     "name": "SnailDOS",
