--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "devDependencies": {
     "electron": "22.0.3",
     "electron-builder": "23.6.0",
-    "gitmoji-changelog": "2.3.0"
+    "gitmoji-changelog": "2.3.0",
+    "electron-builder-squirrel-windows": "23.6.0"
   },
   "dependencies": {
     "electron-is-dev": "^2.0.0",
