--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "SnailKM",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "Keyboard Configurator for SnailDOS keyboards.",
   "main": "main.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/SnailKM/SnailKM"
+    "url": "https://github.com/SnailKM/SnailKM-Software"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,7 +17,7 @@
   "author": {
     "name": "SnailDOS",
     "email": "snaildos@snaildos.com",
-    "url": "https://github.com/SnailKM/SnailKM"
+    "url": "https://github.com/SnailKM/SnailKM-Software"
   },
   "build": {
     "win": {
