--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SnailKM",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Keyboard Configurator for SnailDOS keyboards.",
   "main": "main.js",
   "repository": {
@@ -23,10 +23,9 @@
     "win": {
       "target": [
         {
-          "target": "squirrel",
+          "target": "nsis",
           "arch": [
-            "x64",
-            "ia32"
+            "x64"
           ]
         }
       ]
@@ -37,11 +36,10 @@
     "electron": "22.1.0",
     "electron-builder": "23.6.0",
     "gitmoji-changelog": "2.3.0",
-    "electron-builder-squirrel-windows": "23.6.0"
   },
   "dependencies": {
     "electron-is-dev": "^2.0.0",
     "sudo-prompt": "^9.2.1",
-    "update-electron-app": "^2.0.1"
+    "electron-updater": "^4.3.9"
   }
 }
