--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SnailKM",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "description": "Keyboard Configurator for SnailDOS keyboards.",
   "main": "main.js",
   "repository": {
@@ -39,8 +39,8 @@
   },
   "dependencies": {
     "electron-is-dev": "^2.0.0",
-    "sudo-prompt": "^9.2.1",
-    "electron-updater": "^6.0.0",
-    "electron-log": "^4.4.1"
+    "electron-log": "^4.4.1",
+    "electron-updater": "^5.0.0",
+    "sudo-prompt": "^9.2.1"
   }
 }
