--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "gitmoji-changelog": "2.3.0"
   },
   "dependencies": {
-    "electron-is-dev": "^2.0.0",
-    "electron-log": "^4.4.1",
-    "electron-updater": "^5.0.0",
-    "sudo-prompt": "^9.2.1"
+    "electron-is-dev": "2.0.0",
+    "electron-log": "4.4.1",
+    "electron-updater": "5.0.0",
+    "sudo-prompt": "9.2.1"
   }
 }
